syntax = "proto3";

package kim.gokeeper;

option go_package = "/proto";

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

service UserService {
  rpc Login(LoginRequest) returns (LoginResponse);
}